fix highlight on firefox issue (#115)

--- a/resources/assets/css/_tables.css
+++ b/resources/assets/css/_tables.css
@@ -145,6 +145,7 @@
 
 .table-container table > tbody > tr > td.hoverable-cell > div {
     @apply box-content relative flex items-center h-full px-3 py-4;
+    -moz-box-sizing: border-box;
 }
 
 .table-container table > tbody > tr > td.hoverable-cell.text-right > div {
